Corrected some problems with the slick slider: 1. Properly vertically centered the arrow buttons 2. Fixed the horizontal alignment of slider dots by removing absolute positioning. 3. Using padding of slider rows instead of empty columns for proper spacing while sliding.

--- a/task3/slick/slick-theme.css
+++ b/task3/slick/slick-theme.css
@@ -122,12 +122,12 @@
 
 .slick-dots
 {
-    position: absolute;
-    bottom: -45px;
+    position: relative;
+    /*bottom: -45px;*/
 
     display: block;
 
-    width: 95%;
+    width: 100%;
     padding: 0;
 
     list-style: none;
@@ -205,4 +205,9 @@
 {
     opacity: .75;
     color: black;
+}
+.inSlider
+{
+    padding-left: 15px;
+    padding-right: 15px;    
 }
